--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -266,11 +266,11 @@ Hinter dem Projekt steht die Idee, ein innovatives Logistiksystem, basierend auf
 Das Hauptziel ist die Erarbeitung einer Konzeptstudie, die einen möglichen Weg zur Umsetzung einer automatisch fliegenden Bedienung zeigt. Zusätzlich dazu
 soll eine digitale Speisekarte das automatische System erweitern. Optional wird ein Event organisiert, um das System in der Praxis zu testen.
 
-Um die Ziele des Projekts zu ereichen, wurde eine umfangreiche Recherche durchgeführt. Zu Beginn wurde nach bereits existierenden, ähnlichen Projekten gesucht, um weiters
+Um die Ziele des Projekts zu erreichen, wurde eine umfangreiche Recherche durchgeführt. Zu Beginn wurde nach bereits existierenden, ähnlichen Projekten gesucht, um weiters
 diese zu analysieren und eine Übersicht über den Stand der verwendbaren Technologien zu bekommen. Im folgenden Schritt wurde ein Konzept für jede, für dieses Projekt
 gewählte Technologie erstellt. Zuletzt wurde jedes erarbeitete Konzept getestet, um die Funktionalität dieser sicherzustellen.
 
-Alle Vorteile und Hindernisse in Betracht gezogen, lässt sich sagen, dass das Projekt aus einer Vielzahl verschiedener Komponenten besteht, dessen perfekte Zusammenarbeit Vorraussetzung
+Alle Vorteile und Hindernisse in Betracht gezogen, lässt sich sagen, dass das Projekt aus einer Vielzahl verschiedener Komponenten besteht, dessen perfekte Zusammenarbeit Voraussetzung
 für ein funktionsfähiges System ist.
 
 
