--- a/Marketing.tex
+++ b/Marketing.tex
@@ -197,7 +197,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     Auch bei diesem Wettbewerb reichen Maturaprojekt-Teams aus ganz Österreich ihre Projektideen ein.
     Mit einer Teilnehmerzahl von knapp 120 Projekten ist der Wettbewerb einer der größten Österreichs. Eine
     Experten-Jury aus verschiedenen Fachbereichen wählen sechzehn Teams, die in die engere Auswahl kommen.
-    Hovering Steward wurde aus einer Gruppe von 70 Mitstreitern für die Teilnahme am Finale gewählt und konnte somit
+    Hovering Steward wurde aus einer Gruppe von 70 Mitstreitern im Bereich Technik und Naturwissenschaften für die Teilnahme am Finale gewählt und konnte somit
     auch an der FH Kärnten das Projekt an die Öffentlichkeit bringen.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
