Errorcorrection for print

--- a/Kommunikation_Applikation_und_Hexacopter.tex
+++ b/Kommunikation_Applikation_und_Hexacopter.tex
@@ -65,7 +65,7 @@ Seitens des Hexacopters wird ein zusätzliches Modul benötigt, dieses muss übe
     \begin{centering}
       \includegraphics[width = 0.6\textwidth]{Bilder/RN171_EK}
     \par\end{centering}
-    \caption[RN171 Evaluation-Kit]{RN171 Evaluation-Kit\cite{RN171_EK_source}}
+    \caption[RN171 Evaluation-Kit]{RN171 Evaluation-Kit}
     \label{RN171_EK}
   \end{figure}
 
