--- a/Marketing.tex
+++ b/Marketing.tex
@@ -151,7 +151,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Public Relations}
 
-  \subsection{Wettbewerbe, Events & Präsentationen}
+  \subsection{Wettbewerbe, Events \& Präsentationen}
 
     \subsection*{Jugend Innovativ}
     {Jugend Innovativ\cite{jugendinnovativ}} ist einer der bekanntesten Bewerbe, die Schul- und Diplomarbeitsprojekte
