--- a/diplom.bib
+++ b/diplom.bib
@@ -572,6 +572,12 @@
 	title = {How to talk to Pixy}
 }
 
+@online{PIXY_Porting_Examplecode,
+	lastchecked = {2016-02-28},
+	url = {http://cmucam.org/projects/cmucam5/wiki/Porting_Guide},
+	title = {How to talk to Pixy}
+}
+
 %chrisy
 @online{Vicon,
 	lastchecked = {2016-03-03},
